labs/solutions/07/cloud-native-spring/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: cloud-native-spring
  name: cloud-native-spring
#  namespace: instructor
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: cloud-native-spring
  type: LoadBalancer
