labs/solutions/07/cloud-native-spring/k8s/db-network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-allow
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
  - from:
      - podSelector:
          matchLabels:
            type: backend-app
